RE-518 wip for BagServiceTest